# ocoin

./: .gitignore  Cargo.toml
blockchain/: Cargo.toml
blockchain/src/: block.rs  blockchain.rs  commands.rs  lib.rs  signed_transaction.rs  transaction.rs  wallet.rs  wallet_manager.rs
client/: Cargo.toml
client/src/: main.rs
mempool/: Cargo.toml
mempool/src/: app.rs  lib.rs  main.rs  mempool.rs  message.rs
mempool/tests/: new_tx.rs
src/: block.rs  blockchain.rs  commands.rs  main.rs  signed_transaction.rs  transaction.rs  wallet.rs  wallet_manager.rs
validator_node/: Cargo.toml
validator_node/src/: clap_args.rs  communicator.rs  main.rs  message.rs  node.rs
