[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ecdsa = "0.13.4"
sha256 = "1.0.3"
ring = "0.16.20"
sha2 = "0.10.1"
serde_json = "1.0.59"
p256 = "0.10.1"
rand_core = "0.6.3"
k256 = { version = "0.10.2", features = ["ecdsa", "ecdsa-core"] }
hex = "0.4.3"
anyhow = "1.0.59"