[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain = { path = "../blockchain"}
libp2p = "0.42.2"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
# tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.1"
rand = "0.4"
# once_cell = "1.5"
# log = "0.4"
# pretty_env_logger = "0.4"
# clap = "3.2.16"

anyhow = "1.0.59"