[package]
name = "validator_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockchain = { path = "../blockchain" }
mempool = { path = "../mempool" }
once_cell = "1.5"
clap = { version = "3.2.16", features = ["derive"] }

libp2p = "0.42.2"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
# tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.1"
rand = "0.4"
# tarpc = "0.29"
anyhow = "1.0.59"

# anyhow = "1.0"
# futures = "0.3"
# tarpc = { version = "0.29", features = ["tokio1"] }
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }